--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,15 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
+  background-color: #fff;
   background-color: orangered;
+  height: 80rem;
   flex: 1; }
 
 .logo {
@@ -136,3 +141,13 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-dark-3);
+  padding: 2.5rem;
+  text-align: center; }
