--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -59,6 +59,7 @@
     width: 2rem;
   }
 }
+
 /////////////////////////////// USER NAVIGATION //////////////////////////
 .user-nav {
   display: flex;
@@ -109,10 +110,26 @@
     border-radius: 50%;
     margin-right: 1rem;
   }
+}
 
-  &__user {
+/////////////////////////////// SIDE NAVIGATION //////////////////////////
+.side-nav {
+  &__item {
   }
 
-  &__user-name {
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
   }
+
+  &__link {
+  }
+}
+
+/////////////////////////////// LEGAL TEXT //////////////////////////
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-dark-3);
+  padding: 2.5rem;
+  text-align: center;
 }
