--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,7 +15,7 @@
   --shadow-dark: 0 2rem 6rem rgba($color: #000000, $alpha: 0.3);
   --shadow-light: 0 2rem 5rem rgba($color: #000000, $alpha: 0.06);
 
-  --link: 1px solid var(--color-grey-light-2);
+  --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
