--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,11 @@ body {
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   min-height: 50rem; }
+  @media only screen and (max-width: 75.125em) {
+    .container {
+      margin: 0;
+      width: 100%;
+      max-width: 100%; } }
 
 .header {
   font-size: 1.4rem;
@@ -53,6 +58,9 @@ body {
 
 .content {
   display: flex; }
+  @media only screen and (max-width: 67.5625em) {
+    .content {
+      flex-direction: column; } }
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
@@ -71,6 +79,9 @@ body {
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--link); }
+  @media only screen and (max-width: 67.5625em) {
+    .detail {
+      padding: 3rem; } }
 
 .description {
   background-color: #fff;
@@ -78,6 +89,10 @@ body {
   margin-right: 4.5rem;
   padding: 3rem;
   box-shadow: var(--shadow-light); }
+  @media only screen and (max-width: 67.5625em) {
+    .description {
+      padding: 2rem;
+      margin-right: 3rem; } }
 
 .user-review {
   flex: 1;
@@ -166,10 +181,17 @@ body {
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem; }
+  @media only screen and (max-width: 67.5625em) {
+    .side-nav {
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     position: relative; }
     .side-nav__item:not(:last-child) {
       margin-bottom: 0.5rem; }
+    @media only screen and (max-width: 67.5625em) {
+      .side-nav__item {
+        flex: 1; } }
   .side-nav__item::before {
     content: "";
     position: absolute;
@@ -200,12 +222,19 @@ body {
     z-index: 10;
     display: flex;
     align-items: center; }
+    @media only screen and (max-width: 67.5625em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        justify-content: center;
+        padding: 2rem; } }
 
 .legal {
   font-size: 1.2rem;
   color: var(--color-grey-dark-3);
   padding: 2.5rem;
   text-align: center; }
+  @media only screen and (max-width: 67.5625em) {
+    .legal {
+      display: none; } }
 
 .gallery {
   display: flex; }
@@ -319,13 +348,15 @@ body {
   align-items: center; }
   .recommend__count {
     margin-right: auto; }
+  .recommend__friends {
+    display: flex; }
   .recommend__photo {
     box-sizing: content-box;
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
     border: 3px solid #fff;
-    margin-right: -1.5rem; }
+    margin-right: -2rem; }
 
 .review {
   background-color: #fff;
@@ -334,6 +365,10 @@ body {
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden; }
+  @media only screen and (max-width: 67.5625em) {
+    .review {
+      padding: 2rem;
+      margin-bottom: 3rem; } }
   .review__text {
     margin-bottom: 2rem;
     z-index: 10;
@@ -374,6 +409,9 @@ body {
 .cta {
   padding: 3.5rem 0;
   text-align: center; }
+  @media only screen and (max-width: 67.5625em) {
+    .cta {
+      padding: 2.5rem 0; } }
   .cta__book-now {
     font-size: 1.5rem;
     font-weight: 300;
