--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -118,11 +118,20 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-large) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      flex: 1;
     }
   }
 
@@ -168,6 +177,11 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-large) {
+      justify-content: center;
+      padding: 2rem;
+    }
   }
 }
 
@@ -177,6 +191,10 @@
   color: var(--color-grey-dark-3);
   padding: 2.5rem;
   text-align: center;
+
+  @media only screen and (max-width: $bp-large) {
+    display: none;
+  }
 }
 
 /////////////////////////////// GALLERY //////////////////////////
@@ -351,6 +369,10 @@
     margin-right: auto;
   }
 
+  &__friends {
+    display: flex;
+  }
+
   &__photo {
     box-sizing: content-box;
     height: 4rem;
@@ -358,7 +380,7 @@
     border-radius: 50%;
     border: 3px solid #fff;
 
-    margin-right: -1.5rem;
+    margin-right: -2rem;
   }
 }
 
@@ -370,6 +392,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-large) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -428,6 +455,10 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-large) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 1.5rem;
