--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,6 +20,10 @@
 
 $bp-largest: 75.125em; //1202px
 $bp-large: 67.5625em; //1081px
+$bp-small: 41.5em; //663px
+$bp-smallest: 32.5em; //520px
+
+$bp-smallest-1: 23.85em; //380px
 
 * {
   margin: 0;
