--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,6 +22,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: $bp-smallest) {
+    flex-wrap: wrap;
+    height: 10rem;
+    align-items: space-around;
+  }
+
+  @media only screen and (max-width: $bp-smallest-1) {
+    font-size: 1.2rem;
+  }
 }
 
 .content {
@@ -57,6 +67,14 @@
   @media only screen and (max-width: $bp-large) {
     padding: 3rem;
   }
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+  }
+
+  @media only screen and (max-width: $bp-smallest-1) {
+    font-size: 1.2rem;
+  }
 }
 
 .description {
@@ -70,6 +88,11 @@
   @media only screen and (max-width: $bp-large) {
     padding: 2rem;
     margin-right: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
   }
 }
 
