--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -2,6 +2,10 @@
 .logo {
   height: 3.25rem;
   margin-left: 2rem;
+
+  @media only screen and (max-width: $bp-smallest-1) {
+    height: 2rem;
+  }
 }
 
 /////////////////////////////// SEARCH ///////////////////////////////////
@@ -11,6 +15,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media only screen and (max-width: $bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    margin-bottom: 1rem;
+  }
 
   &__input {
     font-family: inherit;
@@ -24,10 +34,18 @@
     transition: all 0.2s;
     margin-right: -3.25rem;
 
+    @media only screen and (max-width: $bp-smallest) {
+      width: 80%;
+    }
+
     &:focus {
       width: 100%;
       outline: none;
       background-color: var(--color-grey-light-3);
+
+      @media only screen and (max-width: $bp-smallest) {
+        width: 90%;
+      }
     }
 
     &::-webkit-input-placeholder {
@@ -87,6 +105,11 @@
     height: 2.25rem;
     width: 2.25rem;
     fill: var(--color-grey-dark-2);
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      fheight: 2rem;
+      width: 2rem;
+    }
   }
 
   &__notification {
@@ -103,12 +126,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      height: 1.5rem;
+      width: 1.5rem;
+      top: 1.2rem;
+      right: 1rem;
+    }
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem;
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      height: 3.5rem;
+    }
   }
 }
 
@@ -121,6 +155,11 @@
   @media only screen and (max-width: $bp-large) {
     display: flex;
     margin: 0;
+    font-size: 1.2rem;
+  }
+
+  @media only screen and (max-width: $bp-smallest-1) {
+    font-size: 0.8rem;
   }
 
   &__item {
@@ -163,6 +202,18 @@
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;
+
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      height: 1.5rem;
+      width: 1.5rem;
+      margin-bottom: 0.7rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      width: 1.2rem;
+      height: 1.2rem;
+    }
   }
 
   &__link:link,
@@ -181,6 +232,11 @@
     @media only screen and (max-width: $bp-large) {
       justify-content: center;
       padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
     }
   }
 }
@@ -219,6 +275,16 @@
     font-weight: 300;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      font-size: 1.2rem;
+      padding: 1rem 1.5rem;
+    }
   }
 
   &__stars {
@@ -231,12 +297,21 @@
     width: 1.75rem;
     height: 1.75rem;
     fill: var(--color-primary);
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      width: 1rem;
+      height: 1rem;
+    }
   }
 
   &__location {
     font-size: 1.2rem;
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      font-size: 0.6rem;
+    }
   }
 
   &__icon-location {
@@ -254,17 +329,29 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0rem 1.5rem;
+    }
   }
 
   &__rating--average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -3px;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating--count {
     font-size: 0.8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 0.5rem;
+    }
   }
 }
 
@@ -381,6 +468,11 @@
     border: 3px solid #fff;
 
     margin-right: -2rem;
+
+    @media only screen and (max-width: $bp-smallest-1) {
+      height: 3.5rem;
+      width: 3.5rem;
+    }
   }
 }
 
