--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,6 +24,7 @@ $bp-small: 41.5em; //663px
 $bp-smallest: 32.5em; //520px
 
 $bp-smallest-1: 23.85em; //380px
+$bp-smallest-2: 24.6875em; //380px
 
 * {
   margin: 0;
